Fixes the speaker list if images are too small

--- a/themes/vixcon-hugo/assets/scss/_speaker.scss
+++ b/themes/vixcon-hugo/assets/scss/_speaker.scss
@@ -109,3 +109,7 @@
 	margin-bottom: 15px;
 	color: $primary-color;
 }
+
+.speaker-block .img-fluid {
+  width: 100%;
+}
